--- a/templates/workflow/financial_report.html
+++ b/templates/workflow/financial_report.html
@@ -108,7 +108,7 @@
                             <td>
                                 <span class="badge bg-success">تحویل داده شده</span>
                             </td>
-                            <td>{{ order.total_price|format_price }}</td>
+                            <td>{{ order.total_price|format_price }} تومان</td>
                             <td>
                                 <div class="btn-group" role="group">
                                     <a href="{% url 'order-detail' order.id %}" class="btn btn-sm btn-info" title="مشاهده جزئیات">
@@ -130,7 +130,7 @@
                     <tfoot class="bg-light">
                         <tr>
                             <td colspan="6" class="text-left font-weight-bold">مجموع</td>
-                            <td class="font-weight-bold">{{ total_revenue|format_price }}</td>
+                            <td class="font-weight-bold">{{ total_revenue|format_price }} تومان</td>
                             <td></td>
                         </tr>
                     </tfoot>
