--- a/templates/workflow/order_detail.html
+++ b/templates/workflow/order_detail.html
@@ -122,9 +122,9 @@
                             <td>{{ item.product.code }}</td>
                             <td>{{ item.requested_quantity|clean_number }}</td>
                             <td>{% if item.approved_quantity %}{{ item.approved_quantity|clean_number }}{% else %}-{% endif %}</td>
-                            <td>{{ item.product.unit }}</td>
-                            <td>{{ item.price_per_unit|format_price }}</td>
-                            <td>{{ item.total_price|format_price }}</td>
+                            <td>{% if item.product.unit_ref %}{{ item.product.unit_ref.symbol }}{% else %}{{ item.product.unit }}{% endif %}</td>
+                            <td>{{ item.price_per_unit|format_price }} تومان</td>
+                            <td>{{ item.total_price|format_price }} تومان</td>
                             <td>{{ item.notes|default:"-" }}</td>
                         </tr>
                         {% empty %}
@@ -169,7 +169,7 @@
                                         {% for item in order.items.all %}
                                         <tr>
                                             <td>{{ item.product.title }} ({{ item.product.code }})</td>
-                                            <td>{{ item.requested_quantity|clean_number }} {{ item.product.unit }}</td>
+                                            <td>{{ item.requested_quantity|clean_number }} {% if item.product.unit_ref %}{{ item.product.unit_ref.symbol }}{% else %}{{ item.product.unit }}{% endif %}</td>
                                             <td>
                                                 <input type="number" step="any" min="0" name="item_{{ item.id }}" 
                                                        class="form-control" value="{{ item.requested_quantity|clean_number }}">
