--- a/templates/workflow/product_form.html
+++ b/templates/workflow/product_form.html
@@ -41,15 +41,15 @@
                         </div>
                         
                         <div class="mb-3">
-                            <label for="{{ form.unit.id_for_label }}" class="form-label">واحد</label>
-                            {{ form.unit }}
-                            {% if form.unit.errors %}
+                            <label for="{{ form.unit_ref.id_for_label }}" class="form-label">واحد</label>
+                            {{ form.unit_ref }}
+                            {% if form.unit_ref.errors %}
                             <div class="text-danger">
-                                {{ form.unit.errors }}
+                                {{ form.unit_ref.errors }}
                             </div>
                             {% endif %}
-                            {% if form.unit.help_text %}
-                            <div class="form-text">{{ form.unit.help_text }}</div>
+                            {% if form.unit_ref.help_text %}
+                            <div class="form-text">{{ form.unit_ref.help_text }}</div>
                             {% endif %}
                         </div>
                         
